--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -115,13 +115,16 @@ markup=pango
 #[bandwidth]
 #command=~/.config/i3/scripts/bandwidth2
 #interval=persist
+[button]
+full_text=󱧥
+command=~/.config/i3/scripts/rem_time
+
 
 # Battery indicator
 [battery]
 command=~/.config/i3/scripts/battery2
 # for alternative battery script  change to battery1
 # change this to battery-pinebook-pro if you are running on pinebook-pro
-label=
 interval=30
 
 #[simple-2]
