--- a/config
+++ b/config
@@ -500,9 +500,9 @@ set $yellowbrown	#b57614
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
-client.focused		    	$mediumgrey	$darkgrey	$white		$mediumgrey	$mediumgrey
-client.unfocused	    	$mediumgrey	$darkgrey	$grey		$darkgrey	$darkgrey
-client.focused_inactive		$darkblue	$darkblue	$grey		$black		$black
+client.focused		    	$mediumgrey	$darkgrey	$white		$mediumgrey		$mediumgrey
+client.unfocused	    	$mediumgrey	$darkgrey	$grey		$darkgrey		$darkgrey
+client.focused_inactive		$mediumgrey	$darkgrey	$grey		$darkgrey		$darkgrey
 client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 
 ############################################
