--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -119,7 +119,6 @@ markup=pango
 full_text=󱧥
 command=~/.config/i3/scripts/rem_time
 
-
 # Battery indicator
 [battery]
 command=~/.config/i3/scripts/battery2
@@ -178,5 +177,5 @@ full_text=
 command=~/.config/i3/scripts/powermenu
 
 [simple-2]
-full_text=: :
+full_text="  : :"
 color=#717171
